--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
+body {
+  background-color: grey;
+}
 .App {
+  border: 1px  solid #fff;
+  margin: 100px  30%;
+  padding: 50px;
   text-align: center;
+  border-radius: 25px;
+}
+.App h2 {
+  color: #fff;
+}
+.App ul {
+  list-style: "✅" ;
+  cursor: pointer;
+  font-size: 22px ;
+  color: #fff;
+  margin: 20px;
+}
+.App input {
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  margin: 20px;
+}
+.App button {
+  display: block;
+  margin: auto;
+  width: 150px;
+  height: 30px;
+  background-color: black;
+  color: #fff;
+  border-radius: 5px;
+  border: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App ul li {
+  /* word-wrap: break-word; */
+  overflow-wrap: break-word;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.diffstyle {
+  list-style: "🆗";
+  text-decoration: line-through;
+  /* background-color: red; */
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.div10 {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
